# tf_proto

./: Cargo.toml
src/: lib.rs
src/protos/: allocation_description.rs  any.rs  api_def.rs  attr_value.rs  classification.rs  example.rs  feature.rs  function.rs  graph.rs  input.rs  meta_graph.rs  mod.rs  model.rs  node_def.rs  op_def.rs  regression.rs  resource_handle.rs  saver.rs  step_stats.rs  tensor.rs  tensor_shape.rs  tensorflow.rs  types.rs  versions.rs
