[package]
name = "tf_proto"
version = "0.1.0"
authors = ["Ryan Wheeler <ryan.wheeler@toyotaconnected.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.5.0"
 bytes = "0.4.12"
# Only necessary if using Protobuf well-known types:
prost-types = "0.5.0"